[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "leetcode-daily"
version = "0.1.0"
description = "Daily LeetCode solutions in Python with tests and CI"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E","F","I","B","UP","W"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
